fix about page styling to be responsive on mobile screens

--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -1,11 +1,3 @@
-#about-main {
-  height: 100vh;
-  color: black;
-  padding-top: 10vh;
-  margin: 0px;
-  padding: 20px;
-}
-
 .about-tw {
   color: black;
   text-align: left;
